// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTablePagination renders correctly 1`] = `
<nav class="datatable__pagination">
  <ul class="datatable__plist">
    <li class="datatable__pitem">
      <a href="#" aria-label="Previous" class="datatable__plink datatable__pprev"><span aria-hidden="true">«</span></a>
    </li>
    <li class="datatable__pitem">
      <a href="#" class="datatable__plink">1</a>
    </li>
    <li class="datatable__pitem">
      <a href="#" class="datatable__plink datatable__plink--active">2</a>
    </li>
    <li class="datatable__pitem">
      <a href="#" class="datatable__plink">3</a>
    </li>
    <li class="datatable__pitem">
      <a href="#" class="datatable__plink">4</a>
    </li>
    <li class="datatable__pitem">
      <a href="#" aria-label="Next" class="datatable__plink datatable__pnext"><span aria-hidden="true">»</span></a>
    </li>
  </ul>
</nav>
`;

exports[`DataTablePagination renders correctly when total change 1`] = `
<nav class="datatable__pagination">
  <ul class="datatable__plist">
    <li class="datatable__pitem">
      <a href="#" aria-label="Previous" class="datatable__plink datatable__pprev"><span aria-hidden="true">«</span></a>
    </li>
    <li class="datatable__pitem">
      <a href="#" class="datatable__plink">1</a>
    </li>
    <li class="datatable__pitem">
      <a href="#" class="datatable__plink">2</a>
    </li>
    <li class="datatable__pitem">
      <a href="#" class="datatable__plink">3</a>
    </li>
    <li class="datatable__pitem">
      <a href="#" class="datatable__plink datatable__plink--active">4</a>
    </li>
    <li class="datatable__pitem">
      <a href="#" aria-label="Next" class="datatable__plink datatable__pnext datatable__plink--disabled"><span aria-hidden="true">»</span></a>
    </li>
  </ul>
</nav>
`;

exports[`DataTablePagination renders correctly when total change 2`] = `
<nav class="datatable__pagination">
  <ul class="datatable__plist">
    <li class="datatable__pitem">
      <a href="#" aria-label="Previous" class="datatable__plink datatable__pprev"><span aria-hidden="true">«</span></a>
    </li>
    <li class="datatable__pitem">
      <a href="#" class="datatable__plink">1</a>
    </li>
    <li class="datatable__pitem">
      <a href="#" class="datatable__plink">2</a>
    </li>
    <li class="datatable__pitem">
      <a href="#" class="datatable__plink">3</a>
    </li>
    <li class="datatable__pitem">
      <a href="#" aria-label="Next" class="datatable__plink datatable__pnext datatable__plink--disabled"><span aria-hidden="true">»</span></a>
    </li>
  </ul>
</nav>
`;

exports[`DataTablePagination renders correctly with invalid perPage 1`] = `
<nav class="datatable__pagination">
  <ul class="datatable__plist">
    <li class="datatable__pitem">
      <a href="#" aria-label="Previous" class="datatable__plink datatable__pprev datatable__plink--disabled"><span aria-hidden="true">«</span></a>
    </li>
    <li class="datatable__pitem">
      <a href="#" class="datatable__plink datatable__plink--active">1</a>
    </li>
    <li class="datatable__pitem">
      <a href="#" class="datatable__plink">2</a>
    </li>
    <li class="datatable__pitem">
      <a href="#" class="datatable__plink">3</a>
    </li>
    <li class="datatable__pitem">
      <a href="#" class="datatable__plink">4</a>
    </li>
    <li class="datatable__pitem">
      <a href="#" class="datatable__plink">5</a>
    </li>
    <li class="datatable__pitem">
      <a href="#" class="datatable__plink">6</a>
    </li>
    <li class="datatable__pitem">
      <a href="#" class="datatable__plink">7</a>
    </li>
    <li class="datatable__pitem">
      <a href="#" class="datatable__plink">8</a>
    </li>
    <li class="datatable__pitem">
      <a href="#" class="datatable__plink">9</a>
    </li>
    <li class="datatable__pitem">
      <a href="#" class="datatable__plink">10</a>
    </li>
    <li class="datatable__pitem">
      <a href="#" aria-label="Next" class="datatable__plink datatable__pnext"><span aria-hidden="true">»</span></a>
    </li>
  </ul>
</nav>
`;
